--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -372,7 +372,7 @@ $grid-list: 'fullhd' 'fullhd' 'screen and (max-width: 2000px)',
     width: min(95vw, calc(95dvh * var(--ratio-width, 1) / var(--ratio-height, 1)));
     max-width: 1100px;
     aspect-ratio: var(--ratio-width) / var(--ratio-height);
-    container-type: inline-size;
+    container-type: size;
     .chip-frame, .ultra-chip-frame {
       padding: 2.5cqw;
       width: 100%;
@@ -380,6 +380,15 @@ $grid-list: 'fullhd' 'fullhd' 'screen and (max-width: 2000px)',
       position: relative;
       box-sizing: border-box;
       display: grid;
+    }
+    .ultra-chip-frame {
+      height: 100cqh;
+      .chip-frame,
+      .frame-item-m1-max,
+      .frame-item-m2-max,
+      .frame-item-m3-max {
+        height: 100%;
+      }
     }
     @include common.chip-component() {
       width: 100%;
